# skrecovery-app

./: .gitignore  Cargo.toml  README.md  build_sk_recovery.command  node1.command  node2.command  start_nodes.sh  tmp.rs  tutorial.md  tutorial2.md  util.rs
app/: Cargo.toml  server_conf.yml
app/client/: main.rs
app/server/: main.rs
client/: client.rs  main.rs
core-apps/pki/: server_conf.yml
core-apps/pki/client/: main.rs
core-apps/pki/files/node2/user1/: user1
core-apps/signing/: Cargo.toml  gg20_keygen.rs  gg20_signing.rs  gg20_sm_client.rs
core-apps/signing/examples/: gg20_keygen.rs  gg20_signing.rs  gg20_sm_client.rs  gg20_sm_manager.rs
core-apps/signing/src/: gg20_keygen.rs  gg20_signing.rs  gg20_sm_client.rs  lib.rs
core-apps/template/: server_conf.yml
core-apps/template/client/: main.rs
core-apps/template/server/: main.rs
core-modules/pki/: .gitignore  Cargo.toml  server_conf.yml  server_conf_tcp.yml  server_conf_tls.yml  start_servers.sh
core-modules/pki/client/: main.rs
core-modules/pki/tls_certs/: node1.test.pem  node2.test.key
core-modules/signing/: .gitignore  Cargo.toml  README.md  server_conf.yaml  server_conf.yml  server_conf_tcp.yml  server_conf_tls.yml  start_servers.sh
core-modules/signing/client/: main.rs  signing_client.rs
core-modules/signing/server/: app.rs  signing_server.rs
core-modules/signing/src/: gg20_keygen.rs  gg20_sm_manager.rs
core-modules/signing/tls_certs/: myCA.key  node3.test.key
core-modules/skrecovery/: Cargo.toml  README.md  server_conf.yml  start_servers.sh  util.rs
core-modules/skrecovery/client/: main.rs
core-modules/skrecovery/server/: app.rs  main.rs
core-modules/template/: Cargo.toml  README.md  server_conf.yml  server_conf_tcp.yml  server_conf_tls.yml  start_servers.sh
core-modules/template/client/: main.rs
core-modules/template/cpp_app/: init_dots.h  main.cpp
core-modules/template/rust_app/: app.rs
core-modules/template/server/: a.out  app.cpp
core-modules/template/tls_certs/: node1.test.key  node2.test.pem  node3.test.pem
docs/: client_apps.md  server_apps.md  tls.md
platform/: server_conf.yml
platform/core/: Cargo.toml  build.rs
platform/core/src/: client.rs  dec_exec.rs  lib.rs  main.rs  utils.rs
platform/server_grpc/: dec_exec_pb2.py  dec_exec_pb2_grpc.py  directory.py  init_server.py  server.py  utils.py
server/: app.rs
