[package]
name = "skrecovery"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
block-padding = "0.3.2"
dotspb = "0.4.0"
elliptic-curve = "0.12.3"
futures = "0.3.28"
itertools = "0.10.5"
libdots = "0.3.1"
p256 = { version = "0.11.1", features = ["arithmetic", "bits"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.13", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls"] }
uuid = { version = "1.3.1", features = ["v4"] }
vsss-rs = "2.3.2"

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "rust_app"
path = "server/app.rs"

[patch.crates-io]
