[package]
name = "dtrust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13", features = ["rt", "net", "rt-multi-thread"]}
dtrust = { path = "../platform/core" }
rand = "0.8.5"
rand_chacha = "0.3.1"
async-trait = "0.1.57"

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "example_app"
path = "server/main.rs"