[package]
name = "signing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "tss_cli"
# path = "src/main.rs"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
reqwest = { version = "0.10.1", default-features = false, features = ["native-tls", "json", "blocking"] }
uuid = { version = "0.8", features = ["v4"] }
aes-gcm = "0.9.4"
curv-kzen = { version = "0.9" }
libsecp256k1 = "0.3.2"
# paillier = { git = "https://github.com/ZenGo-X/rust-paillier"}
# zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.3.12"}
clap = { version = "2.33", features = ["yaml"] }
tokio = { version = "1", default-features = false, features = ["macros"] }
surf = "2"
anyhow = "1"
async-sse = "5"
structopt = "0.3"
futures = "0.3"
round-based = { version = "0.1.4", features = ["dev"] }

[dependencies.multi-party-ecdsa]
path = "/Users/daryakaviani/multi-party-ecdsa"
# git = "https://github.com/ZenGo-X/multi-party-ecdsa"
# tag = "v0.3.0"
# branch = "feature/deprecate-rust-crypto"

[profile.release]
opt-level = 2