[package]
name = "pki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13", features = ["rt", "net", "rt-multi-thread"]}
dtrust = { path = "../../platform/core" }
async-trait = "0.1.57"
yaml-rust = "0.4"
clap = { version = "3.2.19", features = ["derive"] }

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "example_app"
path = "server/main.rs"
