[package]
name = "signing"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
reqwest = { version = "0.10.1", default-features = false, features = ["native-tls", "json", "blocking"] }
uuid = { version = "0.8", features = ["v4"] }
aes-gcm = "0.9.4"
curv-kzen = { version = "0.9" }
libsecp256k1 = "0.3.2"
clap = { version = "2.33", features = ["yaml"] }
tokio = { version = "1", default-features = false, features = ["full"] }
surf = "2"
anyhow = "1"
async-sse = "5"
structopt = "0.3"
futures = "0.3"
round-based = { version = "0.1.4", features = ["dev"] }
dtrust = { path = "../../platform/core" }
rand = "0.8.5"
rand_chacha = "0.3.1"
async-trait = "0.1.57"
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = "0.7.4"
mio = "0.8"
tokio-core = "0.1"

[[bin]]
name = "gg20_keygen"

[[bin]]
name = "gg20_signing"

[[bin]]
name = "gg20_sm_client"

[[bin]]
name = "gg20_sm_manager"

[[bin]]
name = "keygen_test"

[[bin]]
name = "signing_client"

[[bin]]
name = "signing_server"

[lib]
name = "signing"
path = "src/lib.rs"

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
branch = "feature/deprecate-rust-crypto"

[profile.release]
opt-level = 2