[package]
name = "skrecovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13", features = ["rt", "net", "rt-multi-thread"]}
dtrust = { path = "../../platform/core" }
async-trait = "0.1.57"
yaml-rust = "0.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
ark-ff = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-serialize = "0.3.0"
ark-ec = "0.3.0"
ark-std = "0.3.0"
clap = { version = "3.2.19", features = ["derive"] }

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "rust_app"
path = "server/app.rs"

[patch.crates-io]
