[package]
name = "skrecovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13", features = ["rt", "net", "rt-multi-thread"]}
dtrust = { path = "../../platform/core" }
async-trait = "0.1.57"
yaml-rust = "0.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
vsss-rs = "2.3.2"
elliptic-curve = "0.12.3"
hex-literal = "0.3.4"
base16ct = "0.1.1"
blake2 = "0.10.6"
itertools = "0.10.5"
p256 = { version = "0.11.1", features = ["arithmetic", "bits"] }
block-padding = "0.3.2"

clap = { version = "3.2.19", features = ["derive"] }

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "rust_app"
path = "server/app.rs"

[patch.crates-io]
